# rust-lang-apps

./: .env  Cargo.toml  LICENSE  README.md
migrations/2020-12-30-082829_rust_api/: down.sql  up.sql
src/: main.rs  schema.rs  vars.rs
src/controller/: awsc.rs  home.rs  mod.rs
src/middleware/: auth.rs
src/model/: dbmethods.rs  mod.rs  structs.rs
src/routes/: awsr.rs  dieselr.rs  mod.rs
src/test/: integration.rs  mod.rs  unit.rs
